2005-10-20  Sven Herzberg  <herzi@gnome-de.org>

	* gundo/gundo-sequence.h: added the gundo-sequence prototypes to a
	separate header file
	* gundo/gundo-tool-undo.c: the popup window is handled as a member of
	the tool item now
	* gundo/gundo-tool-undo.h: the popup window belongs to a GtkToolItem
	now
	* gundo/gundo-ui.c: use some GObject stuff instead of GtkObject stuff
	* gundo/gundo-ui.h: fix includes to the new headers
	* gundo/gundo.c: use some GObject stuff instead of GtkObject stuff
	* gundo/gundo.h: remove the sequence prototypes, serve as a general
	header now

2005-10-19  Sven Herzberg  <herzi@gnome-de.org>

	* demo/main.c: (main): added gpl header; fix main signature
	* demo/sketch-window.c: (sketch_window_init): looks better now
	* gundo/Makefile.am: added the gtk-helpers code
	* gundo/gtk-helpers.c: added gtk_widget_get_extends
	* gundo/gtk-helpers.h: added gtk_widget_get_extends
	* gundo/gundo-tool-undo.c: move the popup to the correct position
	* gundo/gundo-tool-undo.h: added the hbox to the structure
	* gundo/gundo-ui.c: mention myself
	* gundo/gundo-ui.h: use G_BEGIN_DECLS; mention myself
	* gundo/gundo.c: mention myself
	* gundo/gundo.h: mention myself

2005-10-05  Raphael Fuchs  <r.fuchs-sursee@bluewin.ch>


	* demo/sketch-window.c: Added casts to fix warnings

2005-10-03  Raphael Fuchs  <r.fuchs-sursee@bluewin.ch>


	* demo/sketch-window.c: (sketch_window_init):

2005-10-03  Sven Herzberg  <herzi@gnome-de.org>

	* Makefile.am:
	* NEWS:
	* README:
	* autogen.sh:
	* configure.in:
	* demo/Makefile.am:
	* demo/main.c:
	* demo/sketch-window.c:
	* demo/sketch-window.h:
	* demo/sketch.c:
	* demo/sketch.h:
	* demo/stroke.c:
	* demo/stroke.h:
	* doc/Makefile.am:
	* doc/gundo-docs.sgml:
	* doc/gundo-sections.txt:
	* doc/tmpl/gundo-sequence.sgml:
	* doc/tmpl/gundo-tool-undo.sgml:
	* doc/tmpl/gundo-ui.sgml:
	* doc/tmpl/gundo.sgml:
	* gundo/Makefile.am:
	* gundo/gundo-sequence.h:
	* gundo/gundo-tool-undo.c:
	* gundo/gundo-tool-undo.h:
	* gundo/gundo-ui.c: