@@ -1,5 +1,6 @@
 SUBDIRS=\
 	gundo \
+	gundo-ui \
 	test \
 	doc \
 	demo \
